[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/sprites/ui/order_pose.png" type="Texture" id=1]
[ext_resource path="res://resources/sprites/ui/chaos_pose.png" type="Texture" id=2]
[ext_resource path="res://scripts/Girl.gd" type="Script" id=3]
[ext_resource path="res://resources/sprites/ui/love_pose.png" type="Texture" id=4]
[ext_resource path="res://resources/sprites/ui/default_pose.png" type="Texture" id=5]

[node name="Girl" type="Node2D"]
script = ExtResource( 3 )

[node name="DefaultPose" type="Sprite" parent="."]
position = Vector2( 710, 290 )
texture = ExtResource( 5 )

[node name="OrderPose" type="Sprite" parent="."]
visible = false
position = Vector2( 710, 290 )
texture = ExtResource( 1 )

[node name="LovePose" type="Sprite" parent="."]
position = Vector2( 726, 287 )
texture = ExtResource( 4 )

[node name="ChaosPose" type="Sprite" parent="."]
position = Vector2( 698, 285 )
texture = ExtResource( 2 )
